# 360Pos-desktop

./: .env.example  .eslintrc.cjs  .gitignore  README.md  config.example.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: pos-desktop-windows-tenant.yml  pos-desktop-windows.yml
docs/: anaf-monday-test-checklist.md  deploy-runbook.md  fiscal-flow.md  fiscal-port-audit.md  fiscal-port-status.md  github-public-release.md  hardware-adapters.md  offline-sync-strategy.md  pos-desktop-architecture.md  pos-ui-parity.md  windows-pos-smoke-test.md
scripts/: README.md  cleanup.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  source-1024.png.gen.py
src-tauri/sidecars/: README.md
src-tauri/src/: escpos.rs  lib.rs  main.rs
src-tauri/src/fiscal/: commands.rs  config.rs  credentials.rs  dto.rs  error.rs  mod.rs  persist.rs  provider.rs  runtime_config.rs
src-tauri/src/fiscal/bridge_client/: claim.rs  mod.rs  state.rs  ws.rs
src-tauri/src/fiscal/diagnostics/: probe.rs
src-tauri/src/fiscal/mapping/: datecs_errors.rs  mod.rs  payment.rs  status.rs  vat.rs
src-tauri/src/fiscal/providers/: datecs_dp25.rs  mod.rs  simulator.rs
src-tauri/src/fiscal/transport/: datecs_fp.rs  mod.rs
src/adapters/: index.ts
src/adapters/fiscal/: config.ts  pairing.ts  runtime-config.ts  rust.ts  simulator.ts  types.ts
src/adapters/payment/: bt-ecr.ts  simulator.ts  types.ts
src/adapters/printer/: simulator.ts  types.ts
src/adapters/shared/: random.ts
src/core/pos-core/: README.md  actions.ts  calculator.ts  events.ts  index.ts  money.ts  state-machine.ts  vat.ts
src/features/auth/: LoginScreen.tsx  (+1 more)
src/lib/: cashOfflineFlow.ts  config.ts  db.ts  debugLog.ts  diagnostics.ts  logger.ts  reachability.ts  sidecar.ts
src/store/: auth.ts  catalog.ts  currentOrder.ts  deviceStatus.ts  recovery.ts  remote.ts  syncStatus.ts
src/styles/: globals.css
(+110 files in other folders)
