[package]
name = "pos-desktop"
version = "0.1.0"
description = "360booking POS — Windows desktop app"
authors = ["360booking"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "pos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
encoding_rs = "0.8"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
# Bundles the (optional, vendor-restricted) production fiscal sidecar.
# Public builds leave this disabled and ship simulators only.
fiscal-bridge = []
